	PR target/53811 	* config/i386/i386.c (x86_output_mi_thunk): Check if fnaddr satisfies 	sibcall_insn_operand.  Move it to a temporary register if not.

testsuite/ChangLog:

	PR target/53811
	* g++.dg/other/pr53811.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@189218 138bc75d-0d04-0410-961f-82ee72b054a4